--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.0",
     "motion": "^12.23.0",
     "react": "^19.1.0",
@@ -18,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.1",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
