--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.0",
+    "gsap": "^3.13.0",
     "motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "sass": "^1.89.2",
     "vite": "^7.0.0"
   }
 }
