--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
@@ -22,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.1",
+    "react-use": "^17.6.0",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.11"
   },
